Add Ex00 environment setup notebook

--- a/ex00/Notebook_ex00.ipynb
+++ b/ex00/Notebook_ex00.ipynb
@@ -19,74 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2f95e5b-471f-4b65-a3a7-5f7821221a63",
+   "id": "b60b73d0",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f015f94c-dfa6-4484-b32d-c4396f295d85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53f4eb23-c251-4e30-b961-675c48946e7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abac1ac9-234c-492f-9d3d-8f8498bbf30f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0f9e4df-3809-4640-bce4-86cc57776c2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90c2e58c-ece3-4d12-b40f-25061a12ae49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88328eea-c7dc-4880-976c-f993cdd72016",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94b70951-f353-4d61-89e9-88aa5e3ef10e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce9cdda8-a1e2-429c-8bee-9b0ee7746f8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Buy the dip ?\")\n"
+   ]
   }
  ],
  "metadata": {
