feat: handle NaN in exam grades using np.where to fill missing values

--- a/ex06/Notebook_ex06.ipynb
+++ b/ex06/Notebook_ex06.ipynb
@@ -2,10 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5c4ae327-c00c-49e1-97f4-02ea46057cac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9x9 Ones Array:\n",
+      " [[1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]\n",
+      " [1 1 1 1 1 1 1 1 1]] \n",
+      "\n",
+      "Maze-like Pattern:\n",
+      " [[1 1 1 1 1 1 1 1 1]\n",
+      " [1 0 0 0 0 0 0 0 1]\n",
+      " [1 0 1 1 1 1 1 0 1]\n",
+      " [1 0 1 0 0 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 0 0 1 0 1]\n",
+      " [1 0 1 1 1 1 1 0 1]\n",
+      " [1 0 0 0 0 0 0 0 1]\n",
+      " [1 1 1 1 1 1 1 1 1]] \n",
+      "\n",
+      "Broadcasted Multiplication:\n",
+      " [[ 1  2  3]\n",
+      " [ 2  4  6]\n",
+      " [ 3  6  9]\n",
+      " [ 4  8 12]\n",
+      " [ 5 10 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -32,6 +67,14 @@
     "\n",
     "print(\"Broadcasted Multiplication:\\n\", result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37d8cc6d-694e-461a-9bbc-99085eabe57a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
